@@ -1,3 +1,9 @@
+2009-12-17  Jan Moringen  <scymtym@users.sourceforge.net>
+
+	* rudel.el (rudel-host-session): added mandatory argument info;
+	interactive specification uses `rudel-backend-choose' and
+	`rudel-ask-host-info' to assemble a suitable value for info
+
 2009-12-03  Jan Moringen  <scymtym@users.sourceforge.net>
 
 	* rudel.el (rudel-host-session): determine a transport and a
